[fix] event summary link overlaps next item

--- a/client/src/containers/App/App.css
+++ b/client/src/containers/App/App.css
@@ -15,6 +15,9 @@
   text-decoration: none;
   color: black;
 }
+.text-dark {
+  overflow-wrap: break-word;
+}
 .App-header {
   background-color: #222;
   height: 150px;
